add Handler to change profile info
